# VoidKings

./: .cocos-project.json  .gitignore  CMakeLists.txt  IMPLEMENTATION.md  README.md
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  README.md
Classes/Buildings/: Barracks.cpp  Barracks.h  Building.cpp  Building.h  BuildingCatalog.h  BuildingData.h  BuildingLimits.cpp  BuildingLimits.h  BuildingManager.cpp  BuildingManager.h  DefenceBuilding.cpp  DefenceBuilding.h  DefenseBuilding.cpp  DefenseBuilding.h  DefenseBuildingData.h  OtherBuilding.cpp  OtherBuilding.h  OthersBuildingData.h  ProductionBuilding.cpp  ProductionBuilding.h  ProductionBuildingData.h  StorageBuilding.cpp  StorageBuilding.h  StorageBuildingData.h  Trap.cpp  Trap.h
Classes/Bullet/: Bullet.cpp  Bullet.h
Classes/Core/: Core.cpp  Core.h  GameDefines.h  ResourceManager.cpp  ResourceManager.h
Classes/Map/: GridMap.cpp  GridMap.h
Classes/Potions/: Potion.cpp  Potion.h
Classes/Projectiles/: Projectile.cpp  Projectile.h
Classes/Replay/: ReplayManager.cpp  ReplayManager.h
Classes/Resource/: Resource.cpp  Resource.h
Classes/Save/: SaveManager.cpp  SaveManager.h
Classes/Scenes/: BaseScene.cpp  BaseScene.h  BattleScene.cpp  BattleScene.h  LevelSelectScene.cpp  LevelSelectScene.h  MainMenuScene.cpp  MainMenuScene.h  SceneWorkSummary.md
Classes/Scenes/Components/: BaseUIPanel.cpp  BaseUIPanel.h  BuildShopPanel.cpp  BuildShopPanel.h  GridBackground.cpp  GridBackground.h  PlacementManager.cpp  PlacementManager.h
Classes/Scenes/components/: BaseUIPanel.cpp  BaseUIPanel.h  BuildShopPanel.cpp  BuildShopPanel.h  GridBackground.cpp  GridBackground.h  PlacementManager.cpp  PlacementManager.h
Classes/Share/: BattleShareManager.cpp  BattleShareManager.h
Classes/Soldier/: Soldier.cpp  Soldier.h  UnitData.h  UnitManager.cpp  UnitManager.h
Classes/UI/: IDCardPanel.cpp  IDCardPanel.h  TrainPanel.cpp  TrainPanel.h
Classes/Units/: Unit.cpp  Unit.h
Classes/Utils/: AnimationUtils.cpp  AnimationUtils.h  AudioManager.cpp  AudioManager.h  EffectUtils.cpp  EffectUtils.h  GameSettings.h  NodeUtils.h
Resources/config/: buildings.json  potions.json  settings.json  units.json
Resources/res/: MISSING_RESOURCES.txt  buildings.json  buildings_config.json  defencebuildings_config.json  otherbuildings_config.json  producitonbuildings_config.json  sources.json  storagebuildings_config.json  units.json  units_config.json  units_config_example.json
build-win32/: ALL_BUILD.vcxproj  SYNC_RESOURCE-VoidKings.vcxproj  VoidKings.sln  VoidKings.vcxproj  ZERO_CHECK.vcxproj
build-win32/engine/cocos/core/: ALL_BUILD.vcxproj  cocos2d.vcxproj  cocos2d_libs.sln
cocos2d/cocos/2d/Debug.win32/: libcocos2d.dll.recipe
cocos2d/cocos/2d/Debug.win32/libcocos2d.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cocos2d/cocos/editor-support/spine/proj.win32/Debug.win32/libSpine.tlog/: CL.12644.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  libSpine.lastbuildstate
docs/: 1201-支持调整游戏窗口大小_添加说明文档.md  2025-12-18-模块化重构BaseScene.md  20251222-architecture-dataflow-configplan-Codex.md  20251222-train-battle-sync-Codex.md  20251222-ui-interaction-Codex.md  20251223-hover-english-unitsync-Codex.md  20251223-hover-restore-Codex.md  20251223-hover-train-balance-Codex.md  20251223-idle-archer-tuning-Codex.md  20251223-train-layout-Codex.md  20251223-train-panel-align-Codex.md  20251223-ui-level-reward-Codex.md  20251224-audio-integration-Codex.md  20251224-ui-vfx-polish-Codex.md  20251227-建筑配置抽离-Codex.md  DevelopmentGuide.md  GameDocumentation.md  Soldier_System_Guide.md  TrainPanel_Animation_Offset_Deep_Analysis.md  TrainPanel_Offset_Analysis.md  开发说明.md  操作指南.md  故障排除指南.md  文档.md
docs/diagrams/: README.md  callgraph.mmd
proj.android/: .gitignore  build.gradle  gradle.properties  settings.gradle
proj.android/app/: .gitignore  AndroidManifest.xml  build.gradle  proguard-rules.pro
proj.android/app/jni/: Android.mk  Application.mk
proj.android/app/jni/hellocpp/: main.cpp
proj.android/app/res/values/: strings.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.win32/: .gitignore  RCa16624  VoidKings.sln  VoidKings.vcxproj  VoidKings.vcxproj.filters  build-cfg.json  game.rc
wiki/: README.md  第01章-游戏引擎与项目启动流程.md  第02章-C++设计模式在游戏中的应用.md  第03章-网格建造系统深度剖析.md  第04章-资源管理与经济系统.md  第05章-建筑系统完整实现.md  第06章-陷阱系统实现.md  第07章-兵种系统深度解析.md  第08章-UnitManager兵种管理器.md  第09章-子弹系统实现.md  第10章-战斗场景BattleScene.md  第11章-UI组件系统.md  第12章-动画系统深入讲解.md  第13章-音频系统.md  第14章-存档系统完整实现.md  第15章-战斗回放系统.md  第16章-异步攻防系统.md  第17章-游戏设置系统.md  第18章-Android平台适配.md  第19章-Windows平台构建.md  第20章-代码阅读与调试技巧.md  第21章-新功能开发实战.md  第22章-性能优化指南.md  附录A-完整类图.md  附录B-配置文件规范.md  附录C-资源命名规范.md  附录D-代码规范.md  附录E-常见问题解答FAQ.md
